--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>FASHION</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:wght@400;500;600;700;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <section class="welcome">
@@ -32,52 +30,54 @@
         </header>
         <div class="welcome__container">
             <div class="welcome__info">
-                <img class="white_rect" src="img/white_rectangle_1.svg" alt="white rectangle">
-                <img class="yellow_rect" src="img/yellow_rectangle.svg" alt="white rectangle">
-                <h1 class="welcome__title">LET’S EXPLORE UNIQUE CLOTHES.</h1>
+                <div class="welcome__title_box">
+                    <img class="white_rect" src="img/decor/white_rectangle_1.svg" alt="white rectangle">
+                    <img class="yellow_rect" src="img/decor/yellow_rectangle.svg" alt="white rectangle">
+                    <h1 class="welcome__title">LET’S EXPLORE UNIQUE CLOTHES.</h1>    
+                </div>
                 <p class="welcome__desc">Live for Influential and Innovative fashion!</p>
                 <div class="welcome__button_box">
                     <div class="welcome__button_wave">
-                        <img class="yellow_wave1" src="img/yellow_wave_1.svg" alt="yellow wave 1">
+                        <img class="yellow_wave1" src="img/decor/yellow_wave_1.svg" alt="yellow wave 1">
                     </div>
                     <a href="/" class="btn welcome__button">Shop Now</a>
                 </div>
             </div>
             <div class="welcome__image">
                 <img src="img/girl_pink_fur_coat.png" alt="girl_pink_fur_coat">
-                <img class="star upleft_star" src="img/grey_star.svg" alt="grey star">
-                <img class="star upright_star" src="img/grey_star.svg" alt="grey star">
-                <img class="star downleft_star" src="img/grey_star.svg" alt="grey star">
-                <img class="star downright_star" src="img/grey_star.svg" alt="grey star">
+                <img class="star upleft_star" src="img/decor/grey_star.svg" alt="grey star">
+                <img class="star upright_star" src="img/decor/grey_star.svg" alt="grey star">
+                <img class="star downleft_star" src="img/decor/grey_star.svg" alt="grey star">
+                <img class="star downright_star" src="img/decor/grey_star.svg" alt="grey star">
             </div>
         </div>
     </section>
-    <section class="brends">
-        <div class="brends__container">
-            <div class="brends__item">
-                <img src="img/h&m.png" alt="H&M">
+    <section class="brands">
+        <div class="brands__container">
+            <div class="brands__item">
+                <img src="img/brands/h&m.png" alt="H&M">
             </div>
-            <div class="brends__item">
-                <img src="img/obey.png" alt="OBEY">
+            <div class="brands__item">
+                <img src="img/brands/obey.png" alt="OBEY">
             </div>    
-            <div class="brends__item">
-                <img src="img/shopify.png" alt="shopify">
+            <div class="brands__item">
+                <img src="img/brands/shopify.png" alt="shopify">
             </div>
-            <div class="brends__item">
-                <img src="img/lacoste.png" alt="LACOSTE">
+            <div class="brands__item">
+                <img src="img/brands/lacoste.png" alt="LACOSTE">
             </div>
-            <div class="brends__item">
-                <img src="img/levis.png" alt="LEVI'S">
+            <div class="brands__item">
+                <img src="img/brands/levis.png" alt="LEVI'S">
             </div>
-            <div class="brends__item">
-                <img src="img/amazon.png" alt="amazon">
+            <div class="brands__item">
+                <img src="img/brands/amazon.png" alt="amazon">
             </div>
         </div>
     </section>
     <section class="new-arriv">
         <div class="new-arriv__container">
             <h2 class="new-arriv__title">NEW ARRIVALS
-                <img class="yellow_wave2" src="img/yellow_wave_2.svg" alt="yellow wave 2">
+                <img class="yellow_wave2" src="img/decor/yellow_wave_2.svg" alt="yellow wave 2">
             </h2>
             <div class="new-arriv__items">
                 <div class="new-arriv__item_box">
@@ -90,7 +90,7 @@
                             <p class="explore_now">Explore Now!</p>
                         </div>
                         <div class="new-arriv__item_arrow">
-                            <a class="arrow" href="/"><img src="img/arrow.svg" alt="arrow"></a>
+                            <a class="arrow" href="/"><img src="img/decor/arrow.svg" alt="arrow"></a>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                             <p class="explore_now">Explore Now!</p>
                         </div>
                         <div class="new-arriv__item_arrow">
-                            <a class="arrow" href="/"><img src="img/arrow.svg" alt="arrow"></a>
+                            <a class="arrow" href="/"><img src="img/decor/arrow.svg" alt="arrow"></a>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                             <p class="explore_now">Explore Now!</p>
                         </div>
                         <div class="new-arriv__item_arrow">
-                            <a class="arrow" href="/"><img src="img/arrow.svg" alt="arrow"></a>
+                            <a class="arrow" href="/"><img src="img/decor/arrow.svg" alt="arrow"></a>
                         </div>
                     </div>
                 </div>
@@ -129,14 +129,14 @@
         <div class="advert__container">
             <div class="advert__image">
                 <img class="advert__girl" src="img/girl_yellow_t-shirt.png" alt="girl_yellow_t-shirt">
-                <img class="star upleft_star" src="img/white_star.svg" alt="white star">
-                <img class="star upright_star" src="img/white_star.svg" alt="white star">
-                <img class="star downleft_star" src="img/white_star.svg" alt="white star">
-                <img class="star downright_star" src="img/white_star.svg" alt="white star">
+                <img class="star upleft_star" src="img/decor/white_star.svg" alt="white star">
+                <img class="star upright_star" src="img/decor/white_star.svg" alt="white star">
+                <img class="star downleft_star" src="img/decor/white_star.svg" alt="white star">
+                <img class="star downright_star" src="img/decor/white_star.svg" alt="white star">
             </div>
             <div class="advert__info_box">
                 <div class="advert__info">
-                    <img class="white_rect" src="img/white_rectangle_2.svg" alt="white rectangle">
+                    <img class="white_rect" src="img/decor/white_rectangle_2.svg" alt="white rectangle">
                     <h1 class="advert__title">PAYDAY
                         SALE NOW</h1>
                     <div class="advert__desc">
@@ -154,7 +154,7 @@
     <section class="young-fav">
         <div class="young-fav__container">
             <h2 class="young-fav__title">Young’s Favourite
-                <img class="yellow_wave1" src="img/yellow_wave_1.svg" alt="yellow wave 1">
+                <img class="yellow_wave1" src="img/decor/yellow_wave_1.svg" alt="yellow wave 1">
             </h2>
             <div class="young-fav__items">
                 <div class="young-fav__item_box">
@@ -167,7 +167,7 @@
                             <p class="explore_now">Explore Now!</p>
                         </div>
                         <div class="young-fav__item_arrow">
-                            <a class="arrow" href="/"><img src="img/arrow.svg" alt="arrow"></a>
+                            <a class="arrow" href="/"><img src="img/decor/arrow.svg" alt="arrow"></a>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                             <p class="explore_now">Explore Now!</p>
                         </div>
                         <div class="young-fav__item_arrow">
-                            <a class="arrow" href="/"><img src="img/arrow.svg" alt="arrow"></a>
+                            <a class="arrow" href="/"><img src="img/decor/arrow.svg" alt="arrow"></a>
                         </div>
                     </div>
                 </div>
@@ -206,10 +206,10 @@
                         <div class="ring_small"></div>
                     </div>
                 </div>
-                <img class="ellipse ellipse_large-grey" src="img/grey_ellipse_1.svg" alt="grey ellipse larger">
-                <img class="ellipse ellipse_large-yellow" src="img/yellow_ellipse_1.svg" alt="yellow ellipse larger">
-                <img class="ellipse ellipse_small-yellow" src="img/yellow_ellipse_2.svg" alt="yellow ellipse smaller">
-                <img class="ellipse ellipse_small-grey" src="img/grey_ellipse_2.svg" alt="grey ellipse smaller">
+                <img class="ellipse ellipse_large-grey" src="img/decor/grey_ellipse_1.svg" alt="grey ellipse larger">
+                <img class="ellipse ellipse_large-yellow" src="img/decor/yellow_ellipse_1.svg" alt="yellow ellipse larger">
+                <img class="ellipse ellipse_small-yellow" src="img/decor/yellow_ellipse_2.svg" alt="yellow ellipse smaller">
+                <img class="ellipse ellipse_small-grey" src="img/decor/grey_ellipse_2.svg" alt="grey ellipse smaller">
             </div>
         </div>
     </section>
@@ -228,10 +228,10 @@
             <p class="logo_title footer__logo_title"><a href="/">FASHION</a></p>
             <p class="footer__slogan">Complete your style with awesome clothes from us.</p>
             <div class="footer__social">
-                <img src="img/facebook.svg" alt="facebook">
-                <img src="img/instagram.svg" alt="instagram">
-                <img src="img/twitter.svg" alt="twitter">
-                <img src="img/in.svg" alt="linkedin">
+                <img src="img/socials/facebook.svg" alt="facebook">
+                <img src="img/socials/instagram.svg" alt="instagram">
+                <img src="img/socials/twitter.svg" alt="twitter">
+                <img src="img/socials/in.svg" alt="linkedin">
             </div>
         </div>
         <div class="footer__nav">
