fixed hover effects

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <div class="welcome__button_wave">
                                 <img class="yellow_wave1" src="img/decor/yellow_wave_1.svg" alt="yellow wave 1">
                             </div>
-                            <a href="/" class="btn welcome__button">Shop Now</a>
+                            <a href="/" class="btn welcome__button heartbeat">Shop Now</a>
                         </div>
                     </div>
                     <div class="welcome__image">
@@ -101,7 +101,11 @@
                                 <p class="explore_now">Explore Now!</p>
                             </div>
                             <div class="new-arriv__item_arrow">
-                                <a class="arrow" href="/"><img src="img/decor/arrow.svg" alt="arrow"></a>
+                                <a class="arrow" href="/">
+                                    <svg width="34" height="23" viewBox="0 0 34 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M33.0607 12.5607C33.6464 11.9749 33.6464 11.0251 33.0607 10.4393L23.5147 0.893398C22.9289 0.307611 21.9792 0.307611 21.3934 0.893398C20.8076 1.47919 20.8076 2.42893 21.3934 3.01472L29.8787 11.5L21.3934 19.9853C20.8076 20.5711 20.8076 21.5208 21.3934 22.1066C21.9792 22.6924 22.9289 22.6924 23.5147 22.1066L33.0607 12.5607ZM0 13L32 13V10L0 10L0 13Z" fill="#797979"/>
+                                    </svg>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -115,7 +119,11 @@
                                 <p class="explore_now">Explore Now!</p>
                             </div>
                             <div class="new-arriv__item_arrow">
-                                <a class="arrow" href="/"><img src="img/decor/arrow.svg" alt="arrow"></a>
+                                <a class="arrow" href="/">
+                                    <svg width="34" height="23" viewBox="0 0 34 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M33.0607 12.5607C33.6464 11.9749 33.6464 11.0251 33.0607 10.4393L23.5147 0.893398C22.9289 0.307611 21.9792 0.307611 21.3934 0.893398C20.8076 1.47919 20.8076 2.42893 21.3934 3.01472L29.8787 11.5L21.3934 19.9853C20.8076 20.5711 20.8076 21.5208 21.3934 22.1066C21.9792 22.6924 22.9289 22.6924 23.5147 22.1066L33.0607 12.5607ZM0 13L32 13V10L0 10L0 13Z" fill="#797979"/>
+                                    </svg>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -129,7 +137,11 @@
                                 <p class="explore_now">Explore Now!</p>
                             </div>
                             <div class="new-arriv__item_arrow">
-                                <a class="arrow" href="/"><img src="img/decor/arrow.svg" alt="arrow"></a>
+                                <a class="arrow" href="/">
+                                    <svg width="34" height="23" viewBox="0 0 34 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M33.0607 12.5607C33.6464 11.9749 33.6464 11.0251 33.0607 10.4393L23.5147 0.893398C22.9289 0.307611 21.9792 0.307611 21.3934 0.893398C20.8076 1.47919 20.8076 2.42893 21.3934 3.01472L29.8787 11.5L21.3934 19.9853C20.8076 20.5711 20.8076 21.5208 21.3934 22.1066C21.9792 22.6924 22.9289 22.6924 23.5147 22.1066L33.0607 12.5607ZM0 13L32 13V10L0 10L0 13Z" fill="#797979"/>
+                                    </svg>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -158,7 +170,7 @@
                             <p id="advert__date">1 June - 10 June 2021</p>
                             <p id="advert__cond">*Terms & Conditions apply</p>
                         </div>
-                        <a href="/" class="btn advert__button">SHOP NOW</a> 
+                        <a href="/" class="btn advert__button heartbeat">SHOP NOW</a> 
                     </div>
                 </div>
             </div>
@@ -181,7 +193,11 @@
                                 <p class="explore_now">Explore Now!</p>
                             </div>
                             <div class="young-fav__item_arrow">
-                                <a class="arrow" href="/"><img src="img/decor/arrow.svg" alt="arrow"></a>
+                                <a class="arrow" href="/">
+                                    <svg width="34" height="23" viewBox="0 0 34 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M33.0607 12.5607C33.6464 11.9749 33.6464 11.0251 33.0607 10.4393L23.5147 0.893398C22.9289 0.307611 21.9792 0.307611 21.3934 0.893398C20.8076 1.47919 20.8076 2.42893 21.3934 3.01472L29.8787 11.5L21.3934 19.9853C20.8076 20.5711 20.8076 21.5208 21.3934 22.1066C21.9792 22.6924 22.9289 22.6924 23.5147 22.1066L33.0607 12.5607ZM0 13L32 13V10L0 10L0 13Z" fill="#797979"/>
+                                    </svg>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -195,7 +211,11 @@
                                 <p class="explore_now">Explore Now!</p>
                             </div>
                             <div class="young-fav__item_arrow">
-                                <a class="arrow" href="/"><img src="img/decor/arrow.svg" alt="arrow"></a>
+                                <a class="arrow" href="/">
+                                    <svg width="34" height="23" viewBox="0 0 34 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M33.0607 12.5607C33.6464 11.9749 33.6464 11.0251 33.0607 10.4393L23.5147 0.893398C22.9289 0.307611 21.9792 0.307611 21.3934 0.893398C20.8076 1.47919 20.8076 2.42893 21.3934 3.01472L29.8787 11.5L21.3934 19.9853C20.8076 20.5711 20.8076 21.5208 21.3934 22.1066C21.9792 22.6924 22.9289 22.6924 23.5147 22.1066L33.0607 12.5607ZM0 13L32 13V10L0 10L0 13Z" fill="#797979"/>
+                                    </svg>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -253,10 +273,10 @@
                     <p class="logo_title footer__logo_title"><a href="/">FASHION</a></p>
                     <p class="footer__slogan">Complete your style with awesome clothes from us.</p>
                     <div class="footer__social">
-                        <img src="img/socials/facebook.svg" alt="facebook">
-                        <img src="img/socials/instagram.svg" alt="instagram">
-                        <img src="img/socials/twitter.svg" alt="twitter">
-                        <img src="img/socials/in.svg" alt="linkedin">
+                        <a href="/"><img src="img/socials/facebook.svg" alt="facebook"></a>
+                        <a href="/"><img src="img/socials/instagram.svg" alt="instagram"></a>
+                        <a href="/"><img src="img/socials/twitter.svg" alt="twitter"></a>
+                        <a href="/"><img src="img/socials/in.svg" alt="linkedin"></a>
                     </div>
                 </div>
                 <div class="footer__nav">
