added media queries for medium and small desktop sizes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="modern-normalize.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -26,6 +27,7 @@
                 <li class="header__li"><a  href="/" class="header__a">FAVOURITE</a></li>
                 <li class="header__li"><a href="/" class="header__a">LIFESTYLE</a></li>
             </ul>
+            <div class="header__burger"><span></span></div>
             <a href="/" class="btn header__button">SIGN UP</a>
         </nav>
     </header>
@@ -97,10 +99,10 @@
                         </div>
                         <div class="new-arriv__item_desc">
                             <div class="new-arriv__item_text">
-                                <h3>Hoodies & Sweetshirt</h3>
+                                <h3 class="item_title">Hoodies & Sweetshirt</h3>
                                 <p class="explore_now">Explore Now!</p>
                             </div>
-                            <div class="new-arriv__item_arrow">
+                            <div class="item_arrow new-arriv__item_arrow">
                                 <a class="arrow" href="/">
                                     <svg width="34" height="23" viewBox="0 0 34 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M33.0607 12.5607C33.6464 11.9749 33.6464 11.0251 33.0607 10.4393L23.5147 0.893398C22.9289 0.307611 21.9792 0.307611 21.3934 0.893398C20.8076 1.47919 20.8076 2.42893 21.3934 3.01472L29.8787 11.5L21.3934 19.9853C20.8076 20.5711 20.8076 21.5208 21.3934 22.1066C21.9792 22.6924 22.9289 22.6924 23.5147 22.1066L33.0607 12.5607ZM0 13L32 13V10L0 10L0 13Z" fill="#797979"/>
@@ -115,10 +117,10 @@
                         </div>
                         <div class="new-arriv__item_desc">
                             <div class="new-arriv__item_text">
-                                <h3>Coats & Parkas</h3>
+                                <h3 class="item_title">Coats & Parkas</h3>
                                 <p class="explore_now">Explore Now!</p>
                             </div>
-                            <div class="new-arriv__item_arrow">
+                            <div class="item_arrow new-arriv__item_arrow">
                                 <a class="arrow" href="/">
                                     <svg width="34" height="23" viewBox="0 0 34 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M33.0607 12.5607C33.6464 11.9749 33.6464 11.0251 33.0607 10.4393L23.5147 0.893398C22.9289 0.307611 21.9792 0.307611 21.3934 0.893398C20.8076 1.47919 20.8076 2.42893 21.3934 3.01472L29.8787 11.5L21.3934 19.9853C20.8076 20.5711 20.8076 21.5208 21.3934 22.1066C21.9792 22.6924 22.9289 22.6924 23.5147 22.1066L33.0607 12.5607ZM0 13L32 13V10L0 10L0 13Z" fill="#797979"/>
@@ -133,10 +135,10 @@
                         </div>
                         <div class="new-arriv__item_desc">
                             <div class="new-arriv__item_text">
-                                <h3>Tees & T-Shirt</h3>
+                                <h3 class="item_title">Tees & T-Shirt</h3>
                                 <p class="explore_now">Explore Now!</p>
                             </div>
-                            <div class="new-arriv__item_arrow">
+                            <div class="item_arrow new-arriv__item_arrow">
                                 <a class="arrow" href="/">
                                     <svg width="34" height="23" viewBox="0 0 34 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M33.0607 12.5607C33.6464 11.9749 33.6464 11.0251 33.0607 10.4393L23.5147 0.893398C22.9289 0.307611 21.9792 0.307611 21.3934 0.893398C20.8076 1.47919 20.8076 2.42893 21.3934 3.01472L29.8787 11.5L21.3934 19.9853C20.8076 20.5711 20.8076 21.5208 21.3934 22.1066C21.9792 22.6924 22.9289 22.6924 23.5147 22.1066L33.0607 12.5607ZM0 13L32 13V10L0 10L0 13Z" fill="#797979"/>
@@ -189,10 +191,10 @@
                         </div>
                         <div class="young-fav__item_desc">
                             <div class="young-fav__item_text">
-                                <h3>Trending on instagram</h3>
+                                <h3 class="item_title">Trending on instagram</h3>
                                 <p class="explore_now">Explore Now!</p>
                             </div>
-                            <div class="young-fav__item_arrow">
+                            <div class="item_arrow young-fav__item_arrow">
                                 <a class="arrow" href="/">
                                     <svg width="34" height="23" viewBox="0 0 34 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M33.0607 12.5607C33.6464 11.9749 33.6464 11.0251 33.0607 10.4393L23.5147 0.893398C22.9289 0.307611 21.9792 0.307611 21.3934 0.893398C20.8076 1.47919 20.8076 2.42893 21.3934 3.01472L29.8787 11.5L21.3934 19.9853C20.8076 20.5711 20.8076 21.5208 21.3934 22.1066C21.9792 22.6924 22.9289 22.6924 23.5147 22.1066L33.0607 12.5607ZM0 13L32 13V10L0 10L0 13Z" fill="#797979"/>
@@ -207,10 +209,10 @@
                         </div>
                         <div class="young-fav__item_desc">
                             <div class="young-fav__item_text">
-                                <h3>All Under $40</h3>
+                                <h3 class="item_title">All Under $40</h3>
                                 <p class="explore_now">Explore Now!</p>
                             </div>
-                            <div class="young-fav__item_arrow">
+                            <div class="item_arrow young-fav__item_arrow">
                                 <a class="arrow" href="/">
                                     <svg width="34" height="23" viewBox="0 0 34 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M33.0607 12.5607C33.6464 11.9749 33.6464 11.0251 33.0607 10.4393L23.5147 0.893398C22.9289 0.307611 21.9792 0.307611 21.3934 0.893398C20.8076 1.47919 20.8076 2.42893 21.3934 3.01472L29.8787 11.5L21.3934 19.9853C20.8076 20.5711 20.8076 21.5208 21.3934 22.1066C21.9792 22.6924 22.9289 22.6924 23.5147 22.1066L33.0607 12.5607ZM0 13L32 13V10L0 10L0 13Z" fill="#797979"/>
@@ -237,15 +239,9 @@
                 </div>
                 <div class="app__image">
                     <img class="mobile_app" src="img/mobile_app.png" alt="Mobile App">
-                    <div class="ring_large"><svg width="637" height="629" viewBox="0 0 637 629" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M635.75 314.5C635.75 487.488 493.727 627.75 318.5 627.75C143.273 627.75 1.25 487.488 1.25 314.5C1.25 141.512 143.273 1.25 318.5 1.25C493.727 1.25 635.75 141.512 635.75 314.5Z" fill="none" stroke="#EFECEB" stroke-width="2.5" />
-                      </svg></div>
-                    <div class="ring_medium"><svg width="537" height="531" viewBox="0 0 537 531" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M535.946 265.128C535.946 410.96 416.219 529.202 268.5 529.202C120.781 529.202 1.05377 410.96 1.05377 265.128C1.05377 119.296 120.781 1.05377 268.5 1.05377C416.219 1.05377 535.946 119.296 535.946 265.128Z" fill="none" stroke="#EFECEB" stroke-width="2.10754" />
-                      </svg></div>
-                    <div class="ring_small"><svg width="440" height="435" viewBox="0 0 440 435" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M439.137 217.237C439.137 336.727 341.036 433.611 220 433.611C98.9639 433.611 0.863422 336.727 0.863422 217.237C0.863422 97.7474 98.9639 0.863422 220 0.863422C341.036 0.863422 439.137 97.7474 439.137 217.237Z" fill="none" stroke="#EFECEB" stroke-width="1.72684" />
-                      </svg></div>
+                    <div class="rings">
+                        <img src="img/decor/rings.png" alt="rings">
+                    </div>
                     <img class="ellipse ellipse_large-grey" src="img/decor/grey_ellipse_1.svg" alt="grey ellipse larger">
                     <img class="ellipse ellipse_large-yellow" src="img/decor/yellow_ellipse_1.svg" alt="yellow ellipse larger">
                     <img class="ellipse ellipse_small-yellow" src="img/decor/yellow_ellipse_2.svg" alt="yellow ellipse smaller">
