--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="modern-normalize.css">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/6aa1088f86.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -258,6 +259,9 @@
                 <div class="join__email">
                     <input type="email" placeholder="Add your email here">
                     <a href="/" class="btn join__button">SEND</a>
+                    <div class="btn join__icon_send">
+                        <i class="fa-regular fa-paper-plane"></i>
+                    </div>
                 </div>
             </div>
         </div>
