added javasacript for burger menu

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li class="header__li"><a href="/" class="header__a">FASHION</a></li>
                 <li class="header__li"><a  href="/" class="header__a">FAVOURITE</a></li>
                 <li class="header__li"><a href="/" class="header__a">LIFESTYLE</a></li>
+                <li><i class="fa-solid fa-xmark fa-2xl" style="color: #ffffff;"></i></li>
             </ul>
             <div class="header__burger"><span></span></div>
             <a href="/" class="btn header__button">SIGN UP</a>
