fixed some styles for mobile screen sizes

--- a/index.html
+++ b/index.html
@@ -14,24 +14,26 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__logo">
-            <a href="/" class="header__logo_pic">
-                <img src="img/logo.svg" alt="logo">
-            </a>
-            <p class="logo_title header__logo_title"><a href="/">FASHION</a></p>
+        <div class="header__container">
+            <div class="header__logo">
+                <a href="/" class="header__logo_pic">
+                    <img src="img/logo.svg" alt="logo">
+                </a>
+                <p class="logo_title header__logo_title"><a href="/">FASHION</a></p>
+            </div>
+            <nav class="header__nav">
+                <ul class="header__ul">
+                    <li class="header__li"><a href="/" class="header__a">CATALOGUE
+                    </a></li>
+                    <li class="header__li"><a href="/" class="header__a">FASHION</a></li>
+                    <li class="header__li"><a  href="/" class="header__a">FAVOURITE</a></li>
+                    <li class="header__li"><a href="/" class="header__a">LIFESTYLE</a></li>
+                    <li><i class="fa-solid fa-xmark fa-2xl" style="color: #ffffff;"></i></li>
+                </ul>
+                <div class="header__burger"><span></span></div>
+                <a href="/" class="btn header__button">SIGN UP</a>
+            </nav>            
         </div>
-        <nav class="header__nav">
-            <ul class="header__ul">
-                <li class="header__li"><a href="/" class="header__a">CATALOGUE
-                </a></li>
-                <li class="header__li"><a href="/" class="header__a">FASHION</a></li>
-                <li class="header__li"><a  href="/" class="header__a">FAVOURITE</a></li>
-                <li class="header__li"><a href="/" class="header__a">LIFESTYLE</a></li>
-                <li><i class="fa-solid fa-xmark fa-2xl" style="color: #ffffff;"></i></li>
-            </ul>
-            <div class="header__burger"><span></span></div>
-            <a href="/" class="btn header__button">SIGN UP</a>
-        </nav>
     </header>
     <section class="welcome">
         <div class="container">
